Configure XCode projects.
- Schemes
- files to ignore (xcuserdata)

--- a/Trader2.xcodeproj/xcshareddata/xcschemes/Trader 2 - Run Record BTC.xcscheme
+++ b/Trader2.xcodeproj/xcshareddata/xcschemes/Trader 2 - Run Record BTC.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "--record --btc ~/prices_btc"
+            argument = "--record --btc ~/Documents/prices_btc.json"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
