--- a/Trader2/Info.plist
+++ b/Trader2/Info.plist
@@ -2,13 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleIdentifier</key>
-    <string>ch.trader</string>
-    <key>CFBundleName</key>
-    <string>Trader 2</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>record from the microphone</string>
-    <key>NSCameraUsageDescription</key>
-    <string>record from the camera</string>
+	<key>CFBundleIdentifier</key>
+	<string>ch.zajo.trader</string>
+	<key>CFBundleName</key>
+	<string>Trader 2</string>
 </dict>
 </plist>
