--- a/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Trader - Release.xcscheme
+++ b/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Trader - Release.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
-               BuildableName = "Trader"
-               BlueprintName = "Trader"
-               ReferencedContainer = "container:Trader.xcodeproj">
+               BuildableName = "CryptoTrader"
+               BlueprintName = "CryptoTrader"
+               ReferencedContainer = "container:CryptoTrader.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -45,17 +45,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
-            BuildableName = "Trader"
-            BlueprintName = "Trader"
-            ReferencedContainer = "container:Trader.xcodeproj">
+            BuildableName = "CryptoTrader"
+            BlueprintName = "CryptoTrader"
+            ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = "--record --btc_usd ~/Documents/ records"
-            isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -68,9 +62,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
-            BuildableName = "Trader"
-            BlueprintName = "Trader"
-            ReferencedContainer = "container:Trader.xcodeproj">
+            BuildableName = "CryptoTrader"
+            BlueprintName = "CryptoTrader"
+            ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
@@ -78,7 +72,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
