--- a/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Trader - Run Record BTC.xcscheme
+++ b/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Trader - Run Record BTC.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
-               BuildableName = "Trader"
-               BlueprintName = "Trader"
-               ReferencedContainer = "container:Trader.xcodeproj">
+               BuildableName = "CryptoTrader"
+               BlueprintName = "CryptoTrader"
+               ReferencedContainer = "container:CryptoTrader.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -45,11 +45,17 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
-            BuildableName = "Trader"
-            BlueprintName = "Trader"
-            ReferencedContainer = "container:Trader.xcodeproj">
+            BuildableName = "CryptoTrader"
+            BlueprintName = "CryptoTrader"
+            ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--record --btc_usd ~/Documents/ records"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -62,9 +68,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
-            BuildableName = "Trader"
-            BlueprintName = "Trader"
-            ReferencedContainer = "container:Trader.xcodeproj">
+            BuildableName = "CryptoTrader"
+            BlueprintName = "CryptoTrader"
+            ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
