--- a/CryptoTrader.xcodeproj/xcshareddata/xcschemes/CryptoMarketRecorder - Run Record BTC.xcscheme
+++ b/CryptoTrader.xcodeproj/xcshareddata/xcschemes/CryptoMarketRecorder - Run Record BTC.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "--btc_usd ~/Documents/ test-records"
+            argument = "--btc_usd ~/Documents/ test-records --load-depth-file  /Users/jonathanduss/Documents/test-records-depth-backup.json"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
@@ -77,7 +77,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
