--- a/CryptoTrader.xcodeproj/xcshareddata/xcschemes/CryptoPreprocessor.xcscheme
+++ b/CryptoTrader.xcodeproj/xcshareddata/xcschemes/CryptoPreprocessor.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6BFC305625BCD5CA00BDD732"
-               BuildableName = "CryptoMarketRecorder"
-               BlueprintName = "CryptoMarketRecorder"
+               BlueprintIdentifier = "6BD322E625CA071600FDDFD4"
+               BuildableName = "CryptoPreprocessor"
+               BlueprintName = "CryptoPreprocessor"
                ReferencedContainer = "container:CryptoTrader.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,18 +44,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6BFC305625BCD5CA00BDD732"
-            BuildableName = "CryptoMarketRecorder"
-            BlueprintName = "CryptoMarketRecorder"
+            BlueprintIdentifier = "6BD322E625CA071600FDDFD4"
+            BuildableName = "CryptoPreprocessor"
+            BlueprintName = "CryptoPreprocessor"
             ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = "record --btc_usd ~/Desktop/record-test test-market"
-            isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -63,15 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6BFC305625BCD5CA00BDD732"
-            BuildableName = "CryptoMarketRecorder"
-            BlueprintName = "CryptoMarketRecorder"
+            BlueprintIdentifier = "6BD322E625CA071600FDDFD4"
+            BuildableName = "CryptoPreprocessor"
+            BlueprintName = "CryptoPreprocessor"
             ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
