--- a/CryptoTrader.xcodeproj/xcshareddata/xcschemes/CryptoTraderLib.xcscheme
+++ b/CryptoTrader.xcodeproj/xcshareddata/xcschemes/CryptoTraderLib.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6BFC305625BCD5CA00BDD732"
-               BuildableName = "CryptoMarketRecorder"
-               BlueprintName = "CryptoMarketRecorder"
+               BlueprintIdentifier = "6B56635E25D94AF200177B33"
+               BuildableName = "libCryptoTraderLib.dylib"
+               BlueprintName = "CryptoTraderLib"
                ReferencedContainer = "container:CryptoTrader.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,22 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6BFC305625BCD5CA00BDD732"
-            BuildableName = "CryptoMarketRecorder"
-            BlueprintName = "CryptoMarketRecorder"
-            ReferencedContainer = "container:CryptoTrader.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = "record --btc_usd ~/Desktop/record-test test-market"
-            isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -66,9 +50,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6BFC305625BCD5CA00BDD732"
-            BuildableName = "CryptoMarketRecorder"
-            BlueprintName = "CryptoMarketRecorder"
+            BlueprintIdentifier = "6B56635E25D94AF200177B33"
+            BuildableName = "libCryptoTraderLib.dylib"
+            BlueprintName = "CryptoTraderLib"
             ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
