--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ iOSInjectionProject/
 CryptoMLTrader/venv
 Common/Market/TradingPlatforms/Binance/BinanceApiKey.swift
 CryptoMLTraderTrainer/venv
+CryptoMLTraderTrainer/input
