--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ CryptoMLTrader/venv
 Common/Market/TradingPlatforms/Binance/BinanceApiKey.swift
 CryptoMLTraderTrainer/venv
 CryptoMLTraderTrainer/input
+CryptoMLTraderTrainer/CryptoMLTraderTrainer/input
