--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ CryptoMLTraderTrainer/input
 CryptoMLTraderTrainer/CryptoMLTraderTrainer/input
 archive.xcarchive
 build.xcarchive
+KrakenHistoricalDataFetcher/trades_ICX-usd.csv
+KrakenHistoricalDataFetcher/trades_btc-usd.csv
