--- a/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Simulate - Debug.xcscheme
+++ b/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Simulate - Debug.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6BD322E625CA071600FDDFD4"
-               BuildableName = "CryptoPreprocessor"
-               BlueprintName = "CryptoPreprocessor"
+               BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
+               BuildableName = "CryptoTrader"
+               BlueprintName = "CryptoTrader"
                ReferencedContainer = "container:CryptoTrader.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,12 +44,38 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6BD322E625CA071600FDDFD4"
-            BuildableName = "CryptoPreprocessor"
-            BlueprintName = "CryptoPreprocessor"
+            BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
+            BuildableName = "CryptoTrader"
+            BlueprintName = "CryptoTrader"
             ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "simulate --btc_usd --bts -s 20000000 &quot;/Users/jonathanduss/Documents/Data Mining/btc.tickers&quot;"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "simulate --btc_usd --macd -e 15000000 &quot;/Users/jonathanduss/Documents/Data Mining/btc.tickers&quot;"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "simulate --eth_usd --macd -e 15000000 &quot;/Users/jonathanduss/Documents/Data Mining/eth.tickers&quot;"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "simulate --eth_usd --macd &quot;/Users/jonathanduss/Documents/Data Mining/eth.tickers&quot;"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "simulate --btc_usd --macd &quot;/Users/jonathanduss/Documents/Data Mining/btc.tickers&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "simulate --help"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -61,9 +87,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6BD322E625CA071600FDDFD4"
-            BuildableName = "CryptoPreprocessor"
-            BlueprintName = "CryptoPreprocessor"
+            BlueprintIdentifier = "6B48DAD025A9F6BA00F2CD6D"
+            BuildableName = "CryptoTrader"
+            BlueprintName = "CryptoTrader"
             ReferencedContainer = "container:CryptoTrader.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -72,7 +98,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
