Update xcode project file and gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,4 @@ build.xcarchive
 KrakenHistoricalDataFetcher/trades_ICX-usd.csv
 KrakenHistoricalDataFetcher/trades_btc-usd.csv
 Parameters
+KrakenHistoricalDataFetcher/.idea
