--- a/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Simulate - Release.xcscheme
+++ b/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Simulate - Release.xcscheme
@@ -52,11 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "simulate --btc_usd --macd &quot;/Users/jonathanduss/Documents/Data Mining/btc.tickers&quot;"
-            isEnabled = "NO">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "simulate --btc_usd --bts &quot;/Users/jonathanduss/Documents/Data Mining/btc.tickers&quot;"
+            argument = "simulate --btc_usd --macd -b 100 -s 50000000 -k 3 /Users/jonathanduss/jo_dev/CryptoTrader/CryptoData/trades_binance_eth-usd-14-05-2021_ticker-from-trades_1sec-avg.csv"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
