--- a/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Simulate - Debug.xcscheme
+++ b/CryptoTrader.xcodeproj/xcshareddata/xcschemes/Simulate - Debug.xcscheme
@@ -60,7 +60,7 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "simulate --btc_usd --gridtrader -b 100 -s 5000000 -e 7000000 -k 3 /Users/jonathanduss/jo_dev/CryptoTrader/CryptoData/trades_binance_eth-usd-14-05-2021_ticker-from-trades_1sec-avg.csv"
+            argument = "simulate --btc_usd --gridtrader -b 100 -s 10000000 -k 1 /Users/jonathanduss/jo_dev/CryptoTrader/CryptoData/btc-usd_tickers-from-trades_10sec_binance_01-06-2021.csv"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
